feat: add new orgSurveyStatus route
